--- a/HomeWork2/Base.lproj/Main.storyboard
+++ b/HomeWork2/Base.lproj/Main.storyboard
@@ -98,9 +98,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="384.5" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="6Hd-EV-F8X" kind="presentation" destinationCreationSelector="act:" id="NZi-Er-DiS"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -119,7 +116,7 @@
             <objects>
                 <viewController storyboardIdentifier="detailContactInfoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6Hd-EV-F8X" customClass="detailContactInfoViewController" customModule="HomeWork2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0d4-Qe-zXI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rco-hC-fgU">
@@ -156,9 +153,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XMy-sJ-qYC">
-                                <rect key="frame" x="360" y="44" width="34" height="30"/>
+                                <rect key="frame" x="358" y="44" width="39" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Save"/>
+                                <state key="normal" title="Close"/>
                                 <connections>
                                     <action selector="savePress:" destination="6Hd-EV-F8X" eventType="touchUpInside" id="gpK-oa-VlV"/>
                                 </connections>
@@ -188,6 +185,7 @@
                     <connections>
                         <outlet property="commentTextField" destination="idT-FS-geK" id="Wfu-CP-05Y"/>
                         <outlet property="jobPlaceTextField" destination="kei-EE-Ecm" id="5ux-Jo-ZlG"/>
+                        <outlet property="nameTextField" destination="Rco-hC-fgU" id="Yjk-YH-wPj"/>
                         <outlet property="phoneNumberTextField" destination="0j8-tf-j1x" id="5bg-Zp-PA9"/>
                         <outlet property="saveButton" destination="XMy-sJ-qYC" id="Pwm-6V-B8F"/>
                         <outlet property="surnameTextField" destination="sg8-vx-i9S" id="r0J-6T-yDY"/>
